# Amplify-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Game/: Game.cpp  Game.h
Wordle/: CMakeLists.txt  wordle.cpp
Wordle/Wordle.headers/: WordleDisplay.h  WordleMatch.h
Wordle/Wordle.src/: WordleDisplay.cpp  WordleMatch.cpp
Wordle/include/: Wordle.h  WordleMatch.h
Wordle/lib/: CMakeLists.txt  Wordle.cpp  WordleDisplay.cpp  WordleMatch.cpp
Wordle/test/: CMakeLists.txt  test.cpp
header/: Hangman.h  MathQuiz.h
src/: Hangman.cpp  MathGame  MathQuiz.cpp
test/: testHangMan.cpp  testMathQuiz.cpp
